Bug 476152 - "Get new" dialogs get stuck at "Working..." after uninstalling something
Summary: "Get new" dialogs get stuck at "Working..." after uninstalling something
Status: RESOLVED FIXED
Alias: None
Product: frameworks-knewstuff
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: 6.0.0
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords: qt6, regression
Depends on:
Blocks:
 
Reported: 2023-10-27 13:30 UTC by Patrick Silva
Modified: 2024-03-13 16:44 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (201.56 KB, image/png)
2023-10-27 13:30 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-10-27 13:30:35 UTC
Created attachment 162594 [details]
screenshot

STEPS TO REPRODUCE
1. open Window Decorations KCM or another KCM with "Get new" feature
2. click on "Get new" button
3. install an addon
4. immediately uninstall the just installed addon

OBSERVED RESULT
The addon is uninstalled as expected and then the dialog gets stuck at "Working...". Please see the attached screenshot.

EXPECTED RESULT
The addon is uninstalled and the dialog does not get stuck at "Working..."

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Nate Graham 2023-10-27 15:57:19 UTC
Can confirm. Looks like it's just cosmetic though as everything still seems to be working.
Comment 2 Bug Janitor Service 2024-03-13 10:31:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/knewstuff/-/merge_requests/302
Comment 3 Akseli Lahtinen 2024-03-13 16:44:48 UTC
Git commit 050a91f2591ee8ea97be04b1e6c400f9c1a2284e by Akseli Lahtinen.
Committed on 13/03/2024 at 16:44.
Pushed by akselmo into branch 'master'.

Refresh visible entry on uninstall

The only entry that is being refreshed after uninstall is the secondary uninstall entry that is not
shown to the user.

This refreshes also the visible one.

M  +5    -0    src/core/transaction.cpp

https://invent.kde.org/frameworks/knewstuff/-/commit/050a91f2591ee8ea97be04b1e6c400f9c1a2284e