Refresh visible entry on uninstall

The only entry that is being refreshed after uninstall is the secondary uninstall entry that is not
shown to the user.

This refreshes also the visible one.

BUG:476152