src/core/transaction.cpp
@@ -335,8 +335,13 @@ Transaction *Transaction::uninstall(EngineBase *engine, const KNSCore::Entry &_e
         qCDebug(KNEWSTUFFCORE) << "about to uninstall entry " << entry.uniqueId();
         ret->d->m_engine->d->installation->uninstall(actualEntryForUninstall2);
 
+        // Update the correct entry
+        entry.setStatus(actualEntryForUninstall2.status());
+        Q_EMIT ret->signalEntryEvent(entry, Entry::StatusChangedEvent);
+
         ret->d->finish();
     });
+
     return ret;
 }
 
